--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
             </div>-->
           </div>
           <div class="about-image">
-            <img src="IMG/logo.svg" alt="Tecon LLC team">
+            <img src="img/logo.svg" alt="Tecon LLC team">
           </div>
         </div>
       </div>
