--- a/index.html
+++ b/index.html
@@ -701,6 +701,19 @@
               <div class="partner-logo">
                 <img src="img/fiallo.png" alt="PLF Estructural Engineers">
               </div>
+              <!--duplicate because js not working properly fml-->
+              <div class="partner-logo">
+                <img src="img/flengineers.png" alt="Fine Lime Engineers">
+              </div>
+              <div class="partner-logo">
+                <img src="img/marchitects.png" alt="M-Architects">
+              </div>
+              <div class="partner-logo">
+                <img src="img/urban2.png" alt="Urban Group Contractors">
+              </div>
+              <div class="partner-logo">
+                <img src="img/fiallo.png" alt="PLF Estructural Engineers">
+              </div>
             </div>
           </div>
         </div>
