--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 </svg>
                 <span> Sunny Isles Beach, FL </span>
                 <span style="margin: 0 0.5rem;">•</span>
-                <span>[year]</span>
+                <span></span>
               </div>
               <p class="project-description">Construction management at Sunny Isles Beach.</p>
             </div>
@@ -234,7 +234,7 @@
                 </svg>
                 <span>Hollywood, FL</span>
                 <span style="margin: 0 0.5rem;">•</span>
-                <span>[year]</span>
+                <span></span>
               </div>
               <p class="project-description">Development advisory for residential complex.</p>
             </div>
@@ -257,7 +257,7 @@
                 </svg>
                 <span>Boca Raton, FL</span>
                 <span style="margin: 0 0.5rem;">•</span>
-                <span>[year]</span>
+                <span></span>
               </div>
               <p class="project-description">Development advisory for residential complex.</p>
             </div>
@@ -280,7 +280,7 @@
                 </svg>
                 <span>Deerfield Beach, FL</span>
                 <span style="margin: 0 0.5rem;">•</span>
-                <span>[year]</span>
+                <span></span>
               </div>
               <p class="project-description">Development advisory for residential complex.</p>
             </div>
@@ -303,7 +303,7 @@
                 </svg>
                 <span>Deerfield Beach, FL</span>
                 <span style="margin: 0 0.5rem;">•</span>
-                <span>[year]</span>
+                <span></span>
               </div>
               <p class="project-description">Development advisory for residential complex.</p>
             </div>
@@ -326,7 +326,7 @@
                 </svg>
                 <span>Fort Lauderdale, FL</span>
                 <span style="margin: 0 0.5rem;">•</span>
-                <span>[year]</span>
+                <span></span>
               </div>
               <p class="project-description">Development advisory for residential complex.</p>
             </div>
@@ -349,7 +349,7 @@
                 </svg>
                 <span>Fort Lauderdale, FL</span>
                 <span style="margin: 0 0.5rem;">•</span>
-                <span>[year]</span>
+                <span></span>
               </div>
               <p class="project-description">Development advisory for residential complex.</p>
             </div>
